# ENME480_mrc

./: .gitignore  README.md
config/: .gitignore
docker/: .env  forReference.txt  humble-enme480_ur3e-compose.yml  humble-enme480_ur3e-nvidia-compose.yml  humble-enme480_ur3e.Dockerfile
src/: .gitignore
src/enme480_description/: CMakeLists.txt  package.xml
src/enme480_description/launch/: view_robot.launch.py
src/enme480_description/meshes/ee_mount/: ee_mount.stl
src/enme480_description/meshes/suction_cup/: suction_cup.stl
src/enme480_description/meshes/vacuum_ee/: vacuum_ee.stl
src/enme480_description/rviz/: view_robot.rviz
src/enme480_description/urdf/: enme480_ur3e.urdf.xacro  enme480_ur3e_control.urdf.xacro  enme480_ur3e_macro.xacro
src/enme480_gazebo/: CMakeLists.txt  package.xml
src/enme480_gazebo/launch/: enme480_empty.launch.py  enme480_ur3e_cubes.launch.py  enme480_ur3e_empty.launch.py  enme480_ur3e_sim.launch.py
src/enme480_gazebo/models/cubeAr1/: model.config  model.sdf
src/enme480_gazebo/models/cubeAr1/meshes/: cubeAr1.mtl
src/enme480_gazebo/models/cubeAr2/: model.config  model.sdf
src/enme480_gazebo/models/cubeAr2/meshes/: cubeAr2.mtl
src/enme480_gazebo/models/cubeAr3/: model.config  model.sdf
src/enme480_gazebo/models/cubeAr3/meshes/: cubeAr3.mtl
src/enme480_gazebo/worlds/: default.sdf  enme480_ur3e_cubes.sdf  enme480_ur3e_cubes_xacro.sdf  enme480_ur3e_empty.sdf
src/enme480_sim/: package.xml  setup.cfg  setup.py
src/enme480_sim/meshes/wood_top/: wood_top.stl
src/enme480_sim/worlds/: enme480_ur3e.sdf  enme480_ur3e_cubes.sdf  enme480_ur3e_cubes_xacro.sdf  enme480_ur3e_old.sdf  enme480_ur3e_xacro.sdf  test.sdf  test_world.sdf
src/mrc_gazebo_plugins/: CMakeLists.txt  package.xml
src/mrc_gazebo_plugins/src/: VacuumGripper.cpp  VacuumGripper.hpp
src/ur3e_mrc/: CMakeLists.txt  README.md  package.xml
src/ur3e_mrc/include/ur3e_mrc/: ur3e_mrc_enme480_ctrl.hpp  ur3e_mrc_enme480_topics.hpp  ur3e_mrc_robotiq.hpp
src/ur3e_mrc/src/: ur3e_mrc_enme480_ctrl.cpp  ur3e_mrc_enme480_topics.cpp  ur3e_mrc_robotiq.cpp  ur3e_mrc_robotiq_n.cpp
src/ur3e_mrc_msgs/: CMakeLists.txt  README.md  package.xml
src/ur3e_mrc_sim/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/ur3e_mrc_sim/launch/: ur3e_enme480.launch.py  ur3e_mrc_enme480_topics.launch.py
src/ur3e_mrc_sim/scripts/: ur3e_mrc_enme480_ctrl.py  ur3e_mrc_enme480_topics.py
src/ur3e_mrc_sim/ur3e_mrc_sim/: ur3e_mrc_enme480_ctrl.py  ur3e_mrc_enme480_topics.py
