<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>enme480_sim</name>
  <version>0.0.0</version>
  <description>This package provides the Gazebo simulation of the UR3e robot for use in the ENME480 lab sections at the University of Maryland.</description>
  <maintainer email="ipenskiy@umd.edu">Ivan Penskiy</maintainer>
  <license file="LICENSE">BSD-3-Clause</license>

  <depend>rclpy</depend>

  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>enme480_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
     <gazebo_ros gazebo_model_path="${prefix}/meshes"/>
  </export>
</package>
