<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrc_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>ROS2 Gazebo plugins</description>
  <maintainer email="ipenskiy@umd.edu">Ivan Penskiy</maintainer>
  <license file="LICENSE">BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros PLUGIN_PATH="${prefix}/lib"/>
  </export>
</package>
