<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3e_mrc_msgs</name>
  <version>0.0.0</version>
  <description>Package containing messages and services definition for ENME480 lab sections</description>
  <maintainer email="ipenskiy@umd.edu">Ivan Penskiy</maintainer>
  <license file="LICENSE">BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
